<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_enter_user_name"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_user_name"
            android:textAlignment="center"
            android:id="@+id/sapp_et_user_name_input"
            android:inputType="text"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sapp_spinner_role"
            android:layout_gravity="center"
            android:entries="@array/roles"
            android:layout_weight="0.3"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/name_value_range"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_lobby_min"
            android:inputType="numberDecimal"
            android:hint="80"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_lobby_max"
            android:inputType="numberDecimal"
            android:hint="180"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_lobby_unitmmol"
            android:text="@string/glucose_unit_mmoll"
            android:layout_weight="1"/>


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sapp_btn_ok_user_name_input"
        android:text="@string/name_ok"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sapp_tv_infobox_username_input"
        android:textSize="20sp"
        android:textAlignment="center"/>

</LinearLayout>